# music-app

./: .gitignore  Dockerfile  manage.py  pyproject.toml
media/media/: pattudala-et00429690-1738651025.avif
musicapp/: admin.py  forms.py  urls.py  views.py
musicapp/migrations/: 0001_initial.py  0002_rename_song_songs_remove_playlist_songs.py  0003_movies_delete_songs.py
musicprj/: asgi.py  settings.py  urls.py  wsgi.py
musicprj/musicapp/: models.py
musicprj/musicapp/migrations/: 0004_remove_playlist_owner_movies_lyrics_and_more.py  0005_remove_playlist_choosevideo_playlist_duration_and_more.py
musicprj/templates/: home.html  nav.html  song_list.html
static/: styles.css
templates/: home.html  media_list.html  nav.html  playlist.html  song_list.html
