[project]
name = "musicprj"
version = "0.1.0"
description = "A Django app"
authors = [
    {name = "subhash",email = "subhashpemula450@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
